# CPP-ML

./: README.md
KNN/source/: CMakeLists.txt  main.cpp
KNN/source/include/: data.hpp  knn.hpp
KNN/source/src/: data.cpp  data_handler.cpp  knn.cpp
Template/source/: CMakeLists.txt  main.cpp
Template/source/include/: data_handler.hpp
Template/source/src/: data.cpp  data_handler.cpp
